2023-01-12 Jan Kotanski <jankotan@gmail.com>
	* add nxsfileinfo sample and instrument metadata creators (#425)
	* tagged as v3.40.0

2023-01-12 Jan Kotanski <jankotan@gmail.com>
	* add sampledescription and sampledescriptiontext components (#421)
	* set metadata sampleId  --sample-id and --sample-id-from-name parameters (#421)
	* set metadata instrumentId with --instrument-id parameter (#422)
	* tagged as v3.39.0

2022-12-12 Jan Kotanski <jankotan@gmail.com>
	* add append_scicat_dataset function to pyeval.scdataset.py (#419)
	* add ndf to nexus file extension lists (#417)
	* fixes for missing fileformat (#417)
	* tagged as v3.38.0

2022-12-09 Jan Kotanski <jankotan@gmail.com>
	* fix for older versions of nxsdatawriter when fileformat is not defined
	* tagged as v3.37.1

2022-12-09 Jan Kotanski <jankotan@gmail.com>
	* support comments to copy map text list files (#409)
	* skip wrong copy map lines with circular dependence (#409)
	* add support for fio files in nxsfileinfo metadata
	* tagged as v3.37.0

2022-12-07 Jan Kotanski <jankotan@gmail.com>
	* add support for copy list in --copy-map* parameters (#406)
	* tagged as v3.36.0

2022-12-06 Jan Kotanski <jankotan@gmail.com>
	* add --copy-map-file and --copy-map parameters (#401)
	* add --copy-map-field  parameters (#403)
	* add parametercopymap component template (#403)
	* tagged as v3.35.0

2022-11-24 Jan Kotanski <jankotan@gmail.com>
	* fix for depends_on field in beamstop template (#396)
	* store NXclass attribute with NXentry only for --raw-metadata (#398)
	* tagged as v3.34.0

2022-11-23 Jan Kotanski <jankotan@gmail.com>
	* check if emptyunits variable exists (#393)
	* tagged as v3.33.1

2022-11-15 Jan Kotanski <jankotan@gmail.com>
	* provide --add-empty-units for nxsfileinfo metadata (#390)
	* tagged as v3.33.0

2022-11-03 Jan Kotanski <jankotan@gmail.com>
	* improve PYEVAL ds.results = ... to one line for the PYEVAL info (#384)
	* tagged as v3.32.2

2022-11-02 Jan Kotanski <jankotan@gmail.com>