@@ -92,12 +92,12 @@ class NXSFileInfoTest(unittest.TestCase):
         self.helperror = "Error: too few arguments\n"
 
         self.helpinfo = """usage: nxsfileinfo [-h] """ \
-            """{field,general,metadata,origdatablock,sample,instrument} ...
+            """{field,general,metadata,origdatablock,sample,instrument,attachment} ...
 
 Command-line tool for showing meta data from Nexus Files
 
 positional arguments:
-  {field,general,metadata,origdatablock,sample,instrument}
+  {field,general,metadata,origdatablock,sample,instrument,attachment}
                         sub-command help
     field               show field information for the nexus file
     general             show general information for the nexus file
@@ -105,6 +105,7 @@ positional arguments:
     origdatablock       show description of all scan files
     sample              show description of sample
     instrument          show description of instrument
+    attachment          show description of attachment
 
 optional arguments:
   -h, --help            show this help message and exit
